.metadata/.plugins/org.eclipse.cdt.ui/pwm_gpiob.build.log
11:18:23 **** Incremental Build of configuration Debug for project pwm_gpiob ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:92:22: error: 'htim3' undeclared (first use in this function); did you mean 'htim2'?
   92 |   HAL_TIM_PWM_Start(&htim3,TIM_CHANNEL_2);
      |                      ^~~~~
      |                      htim2
../Core/Src/main.c:92:22: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

11:18:25 Build Failed. 2 errors, 0 warnings. (took 1s.142ms)

